# pyno

./: .gitignore  README.md  pyproject.toml
example/: flicker.py  separated_io_due.py  separated_io_uno.py
pyno/: com.py  ino.py
pyno/ino/alo/: alo.ino
pyno/ino/reader/: reader.ino
pyno/ino/reader_due/: reader_due.ino
